fixed sidebar and added line spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,8 @@ body {
     padding-left: 30px;
     padding-right: 20px;
     padding-bottom: 30px;
+    line-height: 30px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .sidebar {
@@ -40,8 +42,8 @@ body {
 }
 
 #image {
-   width: 40%;
-   height: 25%;
+   width: 250px;
+   height: 250px;
    float:left;
    margin-right: 30px;
    margin-bottom: 20px;
